login and back end page

--- a/templates/blank.html
+++ b/templates/blank.html
@@ -17,7 +17,7 @@
         </div>
     </nav>
 
-    <div class="container with-chat mt-4">
+    <div class="container mt-4">
         <h1 class="mb-4 text-center">房型推薦系統</h1>
         <div class="row">
             {% for room in rooms %}
@@ -39,28 +39,5 @@
             {% endfor %}
         </div>
     </div>
-
-    <!-- 聊天側欄 -->
-    <div id="chat-sidebar">
-        <div id="chat-header">💬 房型小幫手（點擊收合）</div>
-        <div id="chat-messages"></div>
-        <div class="chat-cards-container">
-            <div id="chat-cards"></div>
-        </div>
-        <div id="chat-input-area" class="input-group">
-            <input type="text" class="form-control" id="chat-input" placeholder="輸入你的問題...">
-            <button class="btn btn-primary" id="send-btn">送出</button>
-        </div>
-    </div>
-
-    <!-- 收縮後的小按鈕 -->
-    <div id="chat-toggle-btn">💬</div>
-
-    <div id="image-overlay" style="display: none;">
-        <img id="overlay-img" src="" alt="">
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/static/chat.js"></script>
 </body>
 </html>
